--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,3 +1,5 @@
+function Navbar () => {
+
 .header {
   height: rem(56px);
   margin-bottom: rem(120px);
@@ -25,3 +27,6 @@
   font-size: var(--mantine-font-size-sm);
   font-weight: 500;
 }
+
+};
+export default Navbar;
