--- a/src/styles/HomePage.module.css
+++ b/src/styles/HomePage.module.css
@@ -1,7 +1,7 @@
-
-
 .header {
   height: rem(56px);
+  display: flex;
+  text-align: center;
   margin-bottom: rem(120px);
   background-color: var(--mantine-color-body);
   border-bottom: rem(1px) solid
@@ -16,6 +16,24 @@
   justify-content: space-between;
   align-items: center;
 }
+.droplistitem {
+  height: rem(56px);
+  display: flex;
+  width: 20em;
+  text-align: center;
+}
+
+.headersearch {
+  height: rem(56px);
+  display: flex;
+  text-align: center;
+  margin-bottom: rem(120px);
+  background-color: var(--mantine-color-body);
+  border-bottom: rem(1px) solid
+    light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+  padding-left: var(--mantine-spacing-md);
+  padding-right: var(--mantine-spacing-md);
+}
 
 .link {
   display: block;
@@ -27,5 +45,3 @@
   font-size: var(--mantine-font-size-sm);
   font-weight: 500;
 }
-
-};
