Alexandro About us page and Footer  03102024

--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -24,7 +24,7 @@
 }
 
 .link {
-  color: white;
+  color: rgb(126, 126, 126);
   text-decoration: none;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
